 - Fix compile problem in swap when using irrlicht in combination with stl (backport from trunk r3281)

 - Fix serialization in CParticleSystemSceneNode (found by B@z)

 - Prevent crash in BillboardTextSceneNode when a custom font is used. Found and fixed by Nalin (bugtracker id: 3020487)

 - Fix problem in animation system that currentFrame got messed up after long pauses (especially when not starting at frame 0).
   See forum thread (http://irrlicht.sourceforge.net/phpBB2/viewtopic.php?p=210537#210537) and bug id 2898876.
   Also remove BeginFrameTime in CAnimatedMeshSceneNode as it hasn't been used anymore since some time.

 - Add framerate and current frame information for animations in example 09 and do some minor cleanup.
 
 - Added another test for xml-reader.
 
 - Fix serialization in several particle emitters and affectors (thx to Ion Dune for reporting).
 
 - Fix compile-error on VS for vector2d::getAngleTrig when used with integers. (thx to greenya for reporting)
 
 - Fix bug in dimension2d::getInterpolated that caused wrong results when used with integers as template parameter. (thx to Greenya for noticing a warning which made me look over this code).
 
 - Remove 2 minor memory leaks in meshloaders (found by tool cppcheck-1.43)

 - reduce file dependencies for IGUIEventReceiver.h (thx ngc92)

 - Initialize GUIEvent.Element in several places (found by greenya)

 - Add EGDS_MESSAGE_BOX_MAX_TEXT_WIDTH and deprecated EGDS_MESSAGE_BOX_MAX_TEST_WIDTH (thx to greenya for reporting).

 - Fix several places where "used" in core::string was used wrongly preventing some memory corruption

 - Remove additional slash in pathnames in X-Loader

 - Fix crash in CGUIListBox when environment was cleared on events

 - Bugfix: Clear up depth-textures which could not be attached in OpenGL to prevent crashes. 

 - Fix arrowMesh boundingbox.

-----------------------------
Changes in 1.7.1 (17.02.2010)
